# salesforce-fastmcp

./: .env.example  .gitignore  README.md  prompts.md  prompts.py  pyproject.toml  salesforce_client.py  server.py
