[project]
name = "salesforce-fastmcp"
version = "1.0.0"
description = "FastMCP server for Salesforce integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
salesforce-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
